--- a/scss/color.scss
+++ b/scss/color.scss
@@ -7,6 +7,7 @@ $blue_l:rgba(67, 151, 255, 1.00); // 亮藍色
 $blue_l_30:rgba(67, 151, 255, .3); // 亮藍色(30%)
 
 $blueGrey_l: rgba(117, 132, 153, 1.00); // 灰藍色
+$blueGrey_l_50: rgba(117, 132, 153, .5); // 灰藍色
 
 $grey_l:rgba(220, 219, 220, 1.00); // 淺灰色
 
