--- a/scss/font.scss
+++ b/scss/font.scss
@@ -34,9 +34,52 @@ p {
   font-size: 1.15rem;
 }
 
+.t-grey-15 {
+  font-size: 1.15rem;
+  color: $font-grey;
+}
+
 .topName {
   display: inline-block;
   font-size: 1.38rem;
   line-height: 80px;
   padding-right: 15px;
 }
+
+.t-blue-16 {
+  display: inline-block;
+  font-size: 1.23rem;
+  color: $blue;
+}
+
+.t-blue-20 {
+  display: inline-block;
+  font-size: 1.53rem;
+  color: $blue;
+}
+
+.t-black-20 {
+  display: inline-block;
+  font-size: 1.53rem;
+  color: $font-deep-black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
