--- a/css/space.css
+++ b/css/space.css
@@ -4,7 +4,13 @@
 
 .p-d-40 { padding-bottom: 40px; }
 
+.p-d-100 { padding-bottom: 100px; }
+
+.p-d-30 { padding-bottom: 30px; }
+
 .p-d-15 { padding-bottom: 15px; }
+
+.p-d-10 { padding-bottom: 10px; }
 
 .p-t-16 { padding-top: 16px; }
 
@@ -12,7 +18,13 @@
 
 .p-l-15 { padding-left: 15px; }
 
+.m-td-25 { margin-top: 25px; margin-bottom: 25px; }
+
+.m-d-25 { margin-bottom: 25px; }
+
 .m-d-20 { margin-bottom: 20px; }
+
+.m-d-10 { margin-bottom: 10px; }
 
 .m-d-100 { margin-bottom: 100px; }
 
