--- a/scss/link.scss
+++ b/scss/link.scss
@@ -25,24 +25,64 @@ button {
   }
 }
 
-.btn-half-blue, .btn-half-grey {
+.btn-half-blue, .btn-half-grey, .btn-half-orange, .btn-half-blueG {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 7px 20px;
   color: white;
   font-size: 1.23rem;
   min-width: 120px;
   @include border-radius(3px);
+  text-align: center !important;
 
   &:hover {
     opacity: .9;
   }
 }
+
 .btn-half-blue {
   background-color: $blue_l;
+
+  &.icon-search {
+    line-height: 30px;
+  }
 }
+
 .btn-half-grey {
   background-color: $grey_l;
 }
+
+.btn-half-orange {
+  background-color: $orange;
+
+  &.icon-send { line-height: 29px; }
+}
+
+.btn-half-blueG {
+  background-color: $blueGrey_l_50;
+
+  &.icon-eye {line-height: 24px;}
+}
+
+
+.btn-outline-blue {
+  display: inline-block;
+  padding: 8px 20px;
+  @include border-radius(3px);
+  border: 1px solid $blue_l;
+  color: $blue_l;
+  font-size: 1rem;
+  @include transition(all .3s);
+  
+  &:hover, &:active {
+    background-color: $blue_l;
+    color: white;
+  }
+
+  &.icon-add {
+    line-height: 30px;
+  }
+}
+
 
 .menuArea {
   display: inline-block;
@@ -81,13 +121,13 @@ button {
 
 .iconLink {
   display: inline-block;
-  width: 25px;
-  height: 25px;
-  font-size: 1rem;
+  width: 30px;
+  height: 30px;
+  font-size: 1.1rem;
   color: white;
   text-align: center;
-  line-height: 25px;
-  @include border-radius(25px);
+  line-height: 30px;
+  @include border-radius(30px);
   
   &.linkBlue {
     background-color: $blue_l_30;
@@ -98,7 +138,11 @@ button {
   }
 
   &.linkGrey {
-    background-color: $blueGrey_l;
+    background-color: $blueGrey_l_50;
+
+    &:hover, &:active {
+      background-color: $blueGrey_l;
+    }
   }
 }
 
