--- a/scss/other.scss
+++ b/scss/other.scss
@@ -20,3 +20,136 @@
     }
   }
 }
+
+
+.numL, .numR {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  font-size: 1.23rem;
+  color: white;
+  line-height: 40px;
+  background-color: $blueGrey_l;
+  text-align: center;
+
+  &:hover, &:active {
+    opacity: .5;
+  }
+}
+
+.numL {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  @include rotate(90deg);
+}
+
+.numR {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  @include rotate(-90deg);
+}
+
+.t-page {
+  display: inline-block;
+  font-size: 1.23rem;
+  color: $blueGrey_l_50;
+  line-height: 40px;
+  margin-right: 12px;
+}
+
+
+.table-header, .table-body {
+  display: inline-block;
+  width: 100%;
+  padding: 15px 10px;
+  @include clearfix();
+  text-align: center;
+}
+
+.table-header {
+  border-top: 2px solid $blue_l_30;
+  border-bottom: 2px solid $blue_l_30;
+  font-weight: bolder;
+  color: $font-deep-black;
+  font-size: 1.15rem;
+}
+.table-body {
+  border-bottom: 1px solid $blue_l_30;
+  color: $font-grey;
+  font-size: 1.07rem;
+}
+
+.table-box10, .table-box20, .table-box30, .table-box40, .table-box50, .table-box60, .table-box70, .table-box80, .table-box90{
+  display: inline-block;
+  float: left;
+}
+
+.noneFloat {
+  float: none !important;
+}
+
+.table-box10 {
+  width: 10%;
+}
+
+.table-box20 {
+  width: 20%;
+}
+
+.table-box30 {
+  width: 30%;
+}
+
+.table-box40 {
+  width: 40%;
+}
+
+.table-box50 {
+  width: 50%;
+}
+
+.table-box60 {
+  width: 60%;
+}
+
+.table-box70 {
+  width: 70%;
+}
+
+.table-box80 {
+  width: 80%;
+}
+
+.table-box90 {
+  width: 90%;
+}
+
+
+.splitLine_bl {
+  display: inline-block;
+  width: 100%;
+  border-bottom: 1px dotted $blue_l_30;
+  margin: 25px 0;
+}
+
+
+.proListImg {
+  display: inline-block;
+  width: 100%;
+  max-width: 80px;
+  @include border-radius(3px);
+  border: 1px solid $grey_l;
+  overflow: hidden;
+}
+
+
+
+
+
+
+
+
+
+
