--- a/scss/space.scss
+++ b/scss/space.scss
@@ -14,8 +14,20 @@
   padding-bottom: 40px;
 }
 
+.p-d-100 {
+  padding-bottom: 100px;
+}
+
+.p-d-30 {
+  padding-bottom: 30px;
+}
+
 .p-d-15 {
   padding-bottom: 15px;
+}
+
+.p-d-10 {
+  padding-bottom: 10px;
 }
 
 .p-t-16 {
@@ -33,10 +45,21 @@
 
 
 
+.m-td-25 {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
 
+.m-d-25 {
+  margin-bottom: 25px;
+}
 
 .m-d-20 {
   margin-bottom: 20px;
+}
+
+.m-d-10 {
+  margin-bottom: 10px;
 }
 
 .m-d-100 {
@@ -50,3 +73,7 @@
 .m-l-10 {
   margin-left: 10px;
 }
+
+
+
+
